--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     },
     "keywords": [
         "data-structure",
-        "linked",
-        "list",
+        "linked list",
         "doubbly",
         "linked",
         "list",
@@ -35,6 +34,7 @@
         "@babel/plugin-syntax-dynamic-import": "^7.8.3",
         "@babel/preset-env": "^7.15.0",
         "babel-loader": "^8.2.2",
+        "copy-webpack-plugin": "^9.0.1",
         "jest": "^27.0.6",
         "webpack": "^5.50.0",
         "webpack-cli": "^4.7.2"
